# ladybug

./: .clang-format  .lcovrc  AGENTS.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: benchmark-workflow.yml  build-and-deploy-extension.yml  build-and-deploy.yml  build-extensions.yml  business-intelligence-benchmark.yml  ci-workflow.yml  clickbench-workflow.yml  deploy-extension.yml  gen-docs.yml  interactive-v1-benchmark.yml  java-workflow.yml  ldbc-fintech-benchmark-workflow.yml  linux-java-workflow.yml  linux-nodejs-workflow.yml  linux-precompiled-bin-workflow.yml  linux-wheel-workflow.yml  lsqb-benchmark-workflow.yml  mac-java-workflow.yml  mac-nodejs-workflow.yml  mac-precompiled-bin-workflow.yml  mac-wheel-workflow.yml  multiplatform-build-test.yml  nodejs-workflow.yml  precompiled-bin-workflow.yml  purge-extension.yml  python-wheel-workflow.yml  test-alpine-clang-format.yml  wasm-workflow.yml  windows-java-workflow.yml  windows-nodejs-workflow.yml  windows-precompiled-bin-workflow.yml  windows-wheel-workflow.yml
benchmark/: benchmark_runner.py  serializer.py
benchmark/lsqb/: benchmark_runner.py
docs/: cpp_style.md  testing.md
extension/: extension_config.cmake
scripts/: headers.txt  migrate-lbug-db.py  run-clang-format-docker.sh
scripts/antlr4/: Cypher.g4  hash.md5
src/: CMakeLists.txt
src/antlr4/: Cypher.g4
src/binder/: binder.cpp  binder_scope.cpp  (+3 more)
src/common/types/: CMakeLists.txt  blob.cpp  date_t.cpp  dtime_t.cpp  interval_t.cpp  list_t.cpp  string_t.cpp  types.cpp  uint128_t.cpp  uuid.cpp
src/common/types/value/: value.cpp
(+874 files in other folders)
